--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VozCheck - Detector de Voz IA Avanzado</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ccs/style.css">
     <!-- Cargar Supabase ANTES que nuestro script -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
